<resources>
    <string name="app_name">WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="search"> Search</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="linked_device">Linked Device</string>
    <string name="starred_message">Starred Messages</string>
    <string name="payment">Payment</string>
    <string name="setting">Settings</string>
    <string name="recent">Recents</string>
    <string name="verification"> Verification Code</string>

</resources>