<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/camera_menu"
        android:title="@string/camera"
        android:icon="@drawable/camera"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/new_group_menu"
        android:title="@string/new_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/new_broadcast_menu"
        android:title="@string/new_broadcast"
        app:showAsAction="never"/>
    <item
        android:id="@+id/linked_menu"
        android:title="@string/linked_device"
        app:showAsAction="never"/>
    <item
        android:id="@+id/starred_menu"
        android:title="@string/starred_message"
        app:showAsAction="never"/>
    <item
        android:id="@+id/setting_menu"
        android:title="@string/setting"
        app:showAsAction="never"/>


</menu>